Replace `elasticsearch.nodes.url` setting by `elasticsearch.urls`
Also remove the `_upload` REST endpoint.